--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     .hero {
       height: 100vh;
-      background: url("C:/Users/dhars/Downloads/shifa bg.jpg") no-repeat center center/cover;
+      background: url(./images/) no-repeat center center/cover;
       display: flex;
       align-items: center;
       justify-content: center;
